--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "homepage": "https://uno1985.github.io/TripSeat_Project",
   "scripts": {
+    "dev-con": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "dev": "vite",
+    "dev:backend": "json-server --watch backend/db.json --port 3001",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^7.2.4"
   }
 }
