--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,12 @@
 *.pem
 
 # Local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # Debug logs
 npm-debug.log*
