--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev-con": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "dev": "vite",
-    "dev:backend": "json-server --watch backend/db.json --port 3001",
+    "dev:backend": "json-server-auth --watch backend/db.json --port 3001",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -17,8 +17,12 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "express": "^4.19.2",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.12.0",
     "swiper": "^12.0.3"
@@ -34,7 +38,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
-    "json-server": "^1.0.0-beta.3",
     "vite": "^7.2.4"
   }
 }
