--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.71.1",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.12.0",
+    "sonner": "^2.0.7",
     "swiper": "^12.1.0"
   },
   "devDependencies": {
